--- a/Assignment 1/part_II.ipynb
+++ b/Assignment 1/part_II.ipynb
@@ -27,15 +27,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Write a binomial tree program to approximate the price of the option. To help you get\n",
+    "started, you can use the instructions, templates and hints provided in appendix B. Con-\n",
+    "struct a tree with 50 steps and explicitly state your option price approximation in the\n",
+    "report."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Option price is : 11.546434850755071\n"
+      "Option price is : 11.55 $\n"
      ]
     }
    ],
@@ -47,7 +57,7 @@
     "r = 0.06\n",
     "K = 99\n",
     "binary = Binary_Tree(S,r,vol,T,N,K)\n",
-    "print(F\"Option price is : {binary.v_tree[0,0]}\")"
+    "print(F\"Option price is : {np.round(binary.v_tree[0,0],2)} $\")"
    ]
   },
   {
@@ -58,8 +68,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Investigate how your binomial tree estimate compares to the analytical Black-Scholes value\n",
+    "of the option. Do experiments for different values of the volatility. The Black-Scholes\n",
+    "formula for European option prices is treated in appendix C: please read that carefully."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +105,7 @@
     "black_scholes = np.vectorize(Black_scholes, excluded=['S','r','T','N','K'])(S,r,vols,T,N,K)\n",
     "v_binary_trees = np.vectorize(lambda x: x.v_tree[0,0])(binary_trees)\n",
     "v_black_scholes = np.vectorize(lambda x: x.ex_Vt[0])(black_scholes)\n",
-    "plt.plot(vols,v_black_scholes, label = \"Black_scholes\")\n",
+    "plt.plot(vols,v_black_scholes, label = \"Black scholes\")\n",
     "plt.plot(vols, v_binary_trees, label = \"Binary tree\")\n",
     "plt.legend()\n",
     "plt.show()"
@@ -97,6 +116,15 @@
    "metadata": {},
    "source": [
     "## Question 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Study the convergence of the method for increasing number of steps in the tree. What is\n",
+    "the computational complexity of this algorithm as a function of the number of steps in the\n",
+    "tree?\n"
    ]
   },
   {
