--- a/Assignment 1/part_II.ipynb
+++ b/Assignment 1/part_II.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,22 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:58: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  p= (np.exp(self.r*self.dt) - d)/(u-d)\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:72: RuntimeWarning: invalid value encountered in scalar add\n",
-      "  v_tree[i , j ] = np.exp(-self.r*self.dt)*(p*up + (1-p)*down)\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:126: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  d1 = (np.log(St/self.K) +  pre_num_d1)/den_d1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vols = np.linspace(0,1,num = 50)\n",
     "S = 100\n",
@@ -107,6 +94,7 @@
     "v_black_scholes = np.vectorize(lambda x: x.ex_Vt[0])(black_scholes)\n",
     "plt.plot(vols,v_black_scholes, label = \"Black scholes\")\n",
     "plt.plot(vols, v_binary_trees, label = \"Binary tree\")\n",
+    "plt.title(\"Call value\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -129,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,9 +131,71 @@
     "v_binary_trees = np.vectorize(lambda x: x.v_tree[0,0])(binary_trees)\n",
     "\n",
     "plt.plot(N, v_binary_trees, label = \"Binary tree\")\n",
+    "plt.tilte(\"Convergence\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 4\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Compute the hedge parameter ∆ from the binomial tree model at t = 0. Compare with\n",
+    "the analytical Black-Scholes delta ∆0 = N(d1). Experiment for different values of the\n",
+    "volatility."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:58: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  p= (np.exp(self.r*self.dt) - d)/(u-d)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:72: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  v_tree[i , j ] = np.exp(-self.r*self.dt)*(p*up + (1-p)*down)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:126: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  d1 = (np.log(St/self.K) +  pre_num_d1)/den_d1\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:130: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  self.delta = norm.cdf((np.log(self.S/self.K) +  pre_num_d1)/den_d1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "vols = np.linspace(0,1,num = 50)\n",
+    "S = 100\n",
+    "T = 1.\n",
+    "N = 50\n",
+    "r = 0.06\n",
+    "K = 99\n",
+    "binary_trees = np.vectorize(Binary_Tree, excluded=['S','r','T','N','K'])(S,r,vols,T,N,K)\n",
+    "black_scholes = np.vectorize(Black_scholes, excluded=['S','r','T','N','K'])(S,r,vols,T,N,K)\n",
+    "v_binary_trees = np.vectorize(lambda x: x.delta)(binary_trees)\n",
+    "v_black_scholes = np.vectorize(lambda x: x.delta)(black_scholes)\n",
+    "plt.plot(vols,v_black_scholes, label = \"Black scholes\")\n",
+    "plt.plot(vols, v_binary_trees, label = \"Binary tree\")\n",
+    "plt.title(\"Delta change\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
