Blacks_scholes corrected

--- a/Assignment 1/Questions.ipynb
+++ b/Assignment 1/Questions.ipynb
@@ -248,11 +248,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.02040816 0.04081633 0.06122449 0.08163265 0.10204082\n",
+      " 0.12244898 0.14285714 0.16326531 0.18367347 0.20408163 0.2244898\n",
+      " 0.24489796 0.26530612 0.28571429 0.30612245 0.32653061 0.34693878\n",
+      " 0.36734694 0.3877551  0.40816327 0.42857143 0.44897959 0.46938776\n",
+      " 0.48979592 0.51020408 0.53061224 0.55102041 0.57142857 0.59183673\n",
+      " 0.6122449  0.63265306 0.65306122 0.67346939 0.69387755 0.71428571\n",
+      " 0.73469388 0.75510204 0.7755102  0.79591837 0.81632653 0.83673469\n",
+      " 0.85714286 0.87755102 0.89795918 0.91836735 0.93877551 0.95918367\n",
+      " 0.97959184 1.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "vols = np.linspace(0,1,num = 50)\n",
+    "print(vols)\n",
     "S = 100\n",
     "T = 1.\n",
     "N = 50\n",
@@ -287,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +318,7 @@
     "v_binary_trees = np.vectorize(lambda x: x.v_tree[0,0])(binary_trees)\n",
     "\n",
     "plt.plot(N, v_binary_trees, label = \"Binary tree\")\n",
-    "plt.tilte(\"Convergence\")\n",
+    "plt.title(\"Convergence\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -324,24 +341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:58: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  p= (np.exp(self.r*self.dt) - d)/(u-d)\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:72: RuntimeWarning: invalid value encountered in scalar add\n",
-      "  v_tree[i , j ] = np.exp(-self.r*self.dt)*(p*up + (1-p)*down)\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:126: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  d1 = (np.log(St/self.K) +  pre_num_d1)/den_d1\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:130: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  self.delta = norm.cdf((np.log(self.S/self.K) +  pre_num_d1)/den_d1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vols = np.linspace(0,1,num = 50)\n",
     "S = 100\n",
