--- a/Assignment 1/Questions.ipynb
+++ b/Assignment 1/Questions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -248,28 +248,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[0.         0.02040816 0.04081633 0.06122449 0.08163265 0.10204082\n",
-      " 0.12244898 0.14285714 0.16326531 0.18367347 0.20408163 0.2244898\n",
-      " 0.24489796 0.26530612 0.28571429 0.30612245 0.32653061 0.34693878\n",
-      " 0.36734694 0.3877551  0.40816327 0.42857143 0.44897959 0.46938776\n",
-      " 0.48979592 0.51020408 0.53061224 0.55102041 0.57142857 0.59183673\n",
-      " 0.6122449  0.63265306 0.65306122 0.67346939 0.69387755 0.71428571\n",
-      " 0.73469388 0.75510204 0.7755102  0.79591837 0.81632653 0.83673469\n",
-      " 0.85714286 0.87755102 0.89795918 0.91836735 0.93877551 0.95918367\n",
-      " 0.97959184 1.        ]\n"
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:60: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  p= (np.exp(self.r*self.dt) - d)/(u-d)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:76: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  v_tree[i , j ] = np.exp(-self.r*self.dt)*(p*up + (1-p)*down)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:130: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  d1 = (np.log(St/self.K) +  (self.r + 0.5*(vol_hedge**2))*(tao))/(vol_hedge*np.sqrt(tao))\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:160: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  self.delta = norm.cdf((np.log(self.ex_St[0]/self.K) +  (self.r + 0.5*(self.vol**2))*(self.T))/(self.vol*np.sqrt(self.T)))\n"
      ]
     }
    ],
    "source": [
     "vols = np.linspace(0,1,num = 50)\n",
-    "print(vols)\n",
     "S = 100\n",
     "T = 1.\n",
     "N = 50\n",
@@ -283,7 +281,10 @@
     "plt.plot(vols, v_binary_trees, label = \"Binary tree\")\n",
     "plt.title(\"Call value\")\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "### Memory cleaning\n",
+    "del binary_trees, black_scholes, v_binary_trees, v_black_scholes"
    ]
   },
   {
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +321,17 @@
     "plt.plot(N, v_binary_trees, label = \"Binary tree\")\n",
     "plt.title(\"Convergence\")\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "### Memory cleaning\n",
+    "del binary_trees,v_binary_trees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$O(n^2)$ complexity, for every n added"
    ]
   },
   {
@@ -341,9 +352,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:60: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  p= (np.exp(self.r*self.dt) - d)/(u-d)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:76: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  v_tree[i , j ] = np.exp(-self.r*self.dt)*(p*up + (1-p)*down)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:130: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  d1 = (np.log(St/self.K) +  (self.r + 0.5*(vol_hedge**2))*(tao))/(vol_hedge*np.sqrt(tao))\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:160: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  self.delta = norm.cdf((np.log(self.ex_St[0]/self.K) +  (self.r + 0.5*(self.vol**2))*(self.T))/(self.vol*np.sqrt(self.T)))\n"
+     ]
+    }
+   ],
    "source": [
     "vols = np.linspace(0,1,num = 50)\n",
     "S = 100\n",
@@ -362,7 +388,11 @@
     "plt.plot(vols, v_binary_trees, label = \"Binary tree\")\n",
     "plt.title(\"Delta change\")\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "## Memory cleaning\n",
+    "del binary_trees, black_scholes, v_binary_trees, v_black_scholes"
    ]
   },
   {
@@ -381,12 +411,201 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 3"
+    "## Part III"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Question 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Let Ct denote the risk-neutral price of a European call option in the Black-Scholes model.\n",
+    "The delta-parameter is defined as ∆t := ∂Ct\n",
+    "∂St . Show that in the Black-Scholes model\n",
+    "∆t = N (d1)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From Black scholes formula we know that the price of an european call option at time t is:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    V(t) = S_t \\cdot N(d_1) - e^{-r \\cdot \\tau} \\cdot K \\cdot N(d_2) = C_t\n",
+    "\\end{equation}\n",
+    "\n",
+    "Then, if we do $dC_t/dS_t$ we obtain:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\frac{∂V(t)}{∂S_t} = \\frac{∂C_t}{∂S_t} = N(d_1)\n",
+    "\\end{equation}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Let Pt denote the risk-neutral price of a European put option. Use the put-call parity and the call option price given in appendix C, to show that Pt is given by\n",
+    "Pt = e−rτ KN (−d2) − StN (−d1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From Black scholes formula we know that $C_t$ is:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    V(t) = S_t \\cdot N(d_1) - e^{-r \\cdot \\tau} \\cdot K \\cdot N(d_2) = C_t\n",
+    "\\end{equation}\n",
+    "\n",
+    "Inserting into the put-call parity and isolating $P_t$ we get:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "    S_t \\cdot N(d_1) - e^{-r \\cdot \\tau} \\cdot K  \\cdot N(d_2) + e^{-r \\cdot \\tau} \\cdot K = P_t + S_t\n",
+    "    \\\\\n",
+    "    P_t =  e^{-r \\cdot \\tau} \\cdot K \\cdot (N(d_2)-1) -S_t \\cdot (N(d_1) -1 )\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Since $N(d)$ is the cumulative distribution function (CDF) of a standard normal equation, or, the probability $P(X<d)$ Thus $1- N(d)$ can be defined as $P(x>d)$, given that the standard normal distribution is symmetric, the probability can be described as $P(x>d) = P(X<-d) = N(-d)$. Thus, substituting $(1-N(d_1)) = N(-d_1)$ and $(1-N(d_2)) = N(-d_2)$ we obtain:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "    P_t =  e^{-r \\cdot \\tau} \\cdot K \\cdot N(-d_2) -S_t \\cdot N(-d_1)S\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider again a short position in a European call option on a non-dividend-paying stock with\n",
+    "a maturity of one year and strike price K of e99. Let the one year interest rate be 6% and the\n",
+    "current price of the stock be e100. Furthermore, assume that the volatility is 20%.\n",
+    "\n",
+    "\n",
+    "3. Use the Euler method to perform a hedging simulation. Do an experiment where the\n",
+    "volatility in the stock price process is matching the volatility used in the delta computation\n",
+    "(set both equal to 20%). Vary the frequency of the hedge adjustment (from daily to weekly)\n",
+    "and explain the results. Perform numerical experiments where the volatility in the stock\n",
+    "price process is not matching the volatility used in the delta valuation. Experiment for\n",
+    "various levels and explain the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = 99\n",
+    "S = 100\n",
+    "r = 0.06\n",
+    "T = 1\n",
+    "vol_stock = 0.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Experiment 1: V_hedge = V_stock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:100: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  d1_function = np.vectorize(lambda m,x: (np.log(x/self.K) +  (self.r + 0.5*(vol_hedge**2))*(self.T-m*self.dt))/(vol_hedge*np.sqrt(self.T-m*self.dt)))\n",
+      "c:\\Users\\joann\\anaconda3\\Lib\\site-packages\\numpy\\lib\\function_base.py:2412: RuntimeWarning: divide by zero encountered in <lambda> (vectorized)\n",
+      "  outputs = ufunc(*inputs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Nw = 52\n",
+    "Nd = 365\n",
+    "black_scholes_w = Black_scholes( S,r,vol_stock, T,Nw, K, auto = False)\n",
+    "black_scholes_d = Black_scholes( S,r,vol_stock, T,Nd, K, auto = False)\n",
+    "\n",
+    "black_scholes_w.euler_hedging()\n",
+    "black_scholes_d.euler_hedging()\n",
+    "\n",
+    "plt.plot(black_scholes_w.deltas, label = \"Weekly adjustment\")\n",
+    "plt.plot(black_scholes_d.deltas, label = \"Daily adjustment\")\n",
+    "plt.title(\"Vol hedge = Vol stock = 0.2\")\n",
+    "plt.xlabel(\"Time\")\n",
+    "plt.ylabel(\"Hedge parameter\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "del black_scholes_d,black_scholes_w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Experiment 2: V_hedge /= V_stock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vols_hedge = np.linspace(0,0.99 ,num = 5)\n",
+    "N = 365\n",
+    "\n",
+    "black_scholes_d = Black_scholes(S,r,vol_stock, T,N, K, auto = False)\n",
+    "### FOR LOOP NEEDS TO BE VECTORIZED\n",
+    "\n",
+    "\n",
+    "for v in vols_hedge:\n",
+    "    black_scholes_d.euler_hedging(vol_hedge = v)\n",
+    "    plt.plot(black_scholes_d.deltas, label = f\"vol {np.round(v,2)}\")\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
