--- a/Assignment 1/Questions.ipynb
+++ b/Assignment 1/Questions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -248,21 +248,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:60: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:64: RuntimeWarning: divide by zero encountered in scalar divide\n",
       "  p= (np.exp(self.r*self.dt) - d)/(u-d)\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:76: RuntimeWarning: invalid value encountered in scalar add\n",
-      "  v_tree[i , j ] = np.exp(-self.r*self.dt)*(p*up + (1-p)*down)\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:130: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  d1 = (np.log(St/self.K) +  (self.r + 0.5*(vol_hedge**2))*(tao))/(vol_hedge*np.sqrt(tao))\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:160: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  self.delta = norm.cdf((np.log(self.ex_St[0]/self.K) +  (self.r + 0.5*(self.vol**2))*(self.T))/(self.vol*np.sqrt(self.T)))\n"
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:80: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  v_tree[i , j ] = np.exp(-self.r*self.dt)*(p*up + (1-p)*down)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:160: RuntimeWarning: divide by zero encountered in divide\n",
+      "  d1s = (np.log(St/self.K) + (self.r + 0.5*(vol_hedge**2)*self.taos))/(self.vol*np.sqrt(self.taos))\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:142: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  self.delta = norm.cdf((np.log(self.ex_St[0]/self.K) +  (self.r + 0.5*(self.vol**2))*(self.T))/(self.vol*np.sqrt(self.T)))\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:98: RuntimeWarning: divide by zero encountered in divide\n",
+      "  d1s = (np.log(self.eu_St/self.K) + (self.r + 0.5*(vol_hedge**2)*self.taos))/(self.vol*np.sqrt(self.taos))\n"
      ]
     }
    ],
@@ -279,7 +287,7 @@
     "v_black_scholes = np.vectorize(lambda x: x.ex_Vt[0])(black_scholes)\n",
     "plt.plot(vols,v_black_scholes, label = \"Black scholes\")\n",
     "plt.plot(vols, v_binary_trees, label = \"Binary tree\")\n",
-    "plt.title(\"Call value\")\n",
+    "plt.title(\"Call value evolution\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +327,7 @@
     "v_binary_trees = np.vectorize(lambda x: x.v_tree[0,0])(binary_trees)\n",
     "\n",
     "plt.plot(N, v_binary_trees, label = \"Binary tree\")\n",
-    "plt.title(\"Convergence\")\n",
+    "plt.title(\"Convergence of Binary tree\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -352,24 +360,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:60: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  p= (np.exp(self.r*self.dt) - d)/(u-d)\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:76: RuntimeWarning: invalid value encountered in scalar add\n",
-      "  v_tree[i , j ] = np.exp(-self.r*self.dt)*(p*up + (1-p)*down)\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:130: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  d1 = (np.log(St/self.K) +  (self.r + 0.5*(vol_hedge**2))*(tao))/(vol_hedge*np.sqrt(tao))\n",
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:160: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  self.delta = norm.cdf((np.log(self.ex_St[0]/self.K) +  (self.r + 0.5*(self.vol**2))*(self.T))/(self.vol*np.sqrt(self.T)))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vols = np.linspace(0,1,num = 50)\n",
     "S = 100\n",
@@ -386,7 +379,7 @@
     "\n",
     "plt.plot(vols,v_black_scholes, label = \"Black scholes\")\n",
     "plt.plot(vols, v_binary_trees, label = \"Binary tree\")\n",
-    "plt.title(\"Delta change\")\n",
+    "plt.title(\"Delta change per stock volatility\")\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
@@ -519,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,20 +532,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:100: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  d1_function = np.vectorize(lambda m,x: (np.log(x/self.K) +  (self.r + 0.5*(vol_hedge**2))*(self.T-m*self.dt))/(vol_hedge*np.sqrt(self.T-m*self.dt)))\n",
-      "c:\\Users\\joann\\anaconda3\\Lib\\site-packages\\numpy\\lib\\function_base.py:2412: RuntimeWarning: divide by zero encountered in <lambda> (vectorized)\n",
-      "  outputs = ufunc(*inputs)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Nw = 52\n",
     "Nd = 365\n",
@@ -583,12 +565,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:98: RuntimeWarning: divide by zero encountered in divide\n",
+      "  d1s = (np.log(self.eu_St/self.K) + (self.r + 0.5*(vol_hedge**2)*self.taos))/(self.vol*np.sqrt(self.taos))\n"
+     ]
+    }
+   ],
    "source": [
     "vols_hedge = np.linspace(0,0.99 ,num = 5)\n",
-    "N = 365\n",
     "\n",
     "black_scholes_d = Black_scholes(S,r,vol_stock, T,N, K, auto = False)\n",
     "### FOR LOOP NEEDS TO BE VECTORIZED\n",
@@ -596,9 +586,101 @@
     "\n",
     "for v in vols_hedge:\n",
     "    black_scholes_d.euler_hedging(vol_hedge = v)\n",
-    "    plt.plot(black_scholes_d.deltas, label = f\"vol {np.round(v,2)}\")\n",
+    "    plt.plot(black_scholes_d.deltas, label = f\"vol_hedge {np.round(v,2)}\")\n",
+    "plt.title(\"V_hedge /= V_stock\")\n",
+    "plt.xlabel(\"Time\")\n",
+    "plt.ylabel(\"Hedge parameter\")\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hedge_simulations_eu(S,r,vol_stock, vol_hedge,T,N,K):\n",
+    "    black_scholes = Black_scholes(S,r,vol_stock, T,N, K, auto = False)\n",
+    "    black_scholes.euler_hedging(vol_hedge = vol_hedge)\n",
+    "    S\n",
+    "    stock_prices = np.array([black_scholes.eu_St])\n",
+    "    delta_values = np.array([ black_scholes.deltas])\n",
+    "\n",
+    "    for _ in range(50):\n",
+    "        black_scholes.euler_method()\n",
+    "        stock_prices = np.vstack([stock_prices,black_scholes.eu_St])\n",
+    "\n",
+    "        black_scholes.euler_hedging(vol_hedge = vol_hedge)\n",
+    "        delta_values = np.vstack([delta_values, black_scholes.deltas])\n",
+    "    \n",
+    "    while True:\n",
+    "        \n",
+    "        if (np.average(np.std(delta_values, axis=0)) <= vol_stock*S):\n",
+    "            break\n",
+    "\n",
+    "        black_scholes.euler_method()\n",
+    "        stock_prices = np.vstack([stock_prices,black_scholes.eu_St])\n",
+    "\n",
+    "        black_scholes.euler_hedging(vol_hedge = vol_hedge)\n",
+    "        delta_values = np.vstack([delta_values, black_scholes.deltas])\n",
+    "\n",
+    "        if stock_prices.shape[0] >= 2000:\n",
+    "            break\n",
+    "\n",
+    "    return stock_prices, delta_values\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(51, 366)\n"
+     ]
+    }
+   ],
+   "source": [
+    "K = 99\n",
+    "S = 100\n",
+    "r = 0.06\n",
+    "T = 1\n",
+    "N = 365\n",
+    "vol_stock = 0.2\n",
+    "vol_hedge = 0.1\n",
+    "stock_prices, delta_values = hedge_simulations_eu(S,r,vol_stock,vol_hedge, T,N,K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r,c in enumerate(stock_prices):\n",
+    "    if r%10 == 0:\n",
+    "        plt.plot(c)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for r,c in enumerate(delta_values):\n",
+    "    if r%10 == 0:\n",
+    "        plt.plot(c)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
