--- a/Assignment 1/Questions.ipynb
+++ b/Assignment 1/Questions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,17 +532,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:98: RuntimeWarning: divide by zero encountered in divide\n",
+      "  d1s = (np.log(self.eu_St/self.K) + (self.r + 0.5*(vol_hedge**2)*self.taos))/(self.vol*np.sqrt(self.taos))\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'd1s' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m black_scholes_w \u001b[38;5;241m=\u001b[39m Black_scholes( S,r,vol_stock, T,Nw, K, auto \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m      4\u001b[0m black_scholes_d \u001b[38;5;241m=\u001b[39m Black_scholes( S,r,vol_stock, T,Nd, K, auto \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m----> 6\u001b[0m black_scholes_w\u001b[38;5;241m.\u001b[39meuler_hedging(do_cash \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      7\u001b[0m black_scholes_d\u001b[38;5;241m.\u001b[39meuler_hedging(do_cash \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      9\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(black_scholes_w\u001b[38;5;241m.\u001b[39mdeltas, label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWeekly adjustment\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:103\u001b[0m, in \u001b[0;36mBlack_scholes.euler_hedging\u001b[1;34m(self, vol_hedge, do_cash)\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;66;03m## Cash and initial call price\u001b[39;00m\n\u001b[0;32m    102\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m do_cash \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m--> 103\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcash_hedging(vol_hedge)\n",
+      "File \u001b[1;32mc:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:112\u001b[0m, in \u001b[0;36mBlack_scholes.cash_hedging\u001b[1;34m(self, vol_hedge)\u001b[0m\n\u001b[0;32m    107\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcash_hedging\u001b[39m(\u001b[38;5;28mself\u001b[39m,vol_hedge):\n\u001b[0;32m    108\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    109\u001b[0m \u001b[38;5;124;03m    Simulates a how does the account balance of an investor changes.\u001b[39;00m\n\u001b[0;32m    110\u001b[0m \u001b[38;5;124;03m    Need to change to vectorized way if is necessary\u001b[39;00m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 112\u001b[0m     f \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39meu_St[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdeltas[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39m np\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m-\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mr\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mT)\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mK\u001b[38;5;241m*\u001b[39mnorm\u001b[38;5;241m.\u001b[39mcdf(d1s[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m-\u001b[39mvol_hedge\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mT))\n\u001b[0;32m    113\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcash \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mN \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m    114\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcash[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m f \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdeltas[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39meu_St[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'd1s' is not defined"
+     ]
+    }
+   ],
    "source": [
     "Nw = 52\n",
     "Nd = 365\n",
     "black_scholes_w = Black_scholes( S,r,vol_stock, T,Nw, K, auto = False)\n",
     "black_scholes_d = Black_scholes( S,r,vol_stock, T,Nd, K, auto = False)\n",
     "\n",
-    "black_scholes_w.euler_hedging()\n",
-    "black_scholes_d.euler_hedging()\n",
+    "black_scholes_w.euler_hedging(do_cash = True)\n",
+    "black_scholes_d.euler_hedging(do_cash = True)\n",
     "\n",
     "plt.plot(black_scholes_w.deltas, label = \"Weekly adjustment\")\n",
     "plt.plot(black_scholes_d.deltas, label = \"Daily adjustment\")\n",
