--- a/Assignment 1/Questions.ipynb
+++ b/Assignment 1/Questions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,9 +393,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:65: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  p= (np.exp(self.r*self.dt) - d)/(u-d)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:84: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  v_tree_european[i , j ] = np.exp(-self.r*self.dt)*(p*european_up + (1-p)*european_down)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\binary_tree.py:86: RuntimeWarning: invalid value encountered in scalar add\n",
+      "  v_tree_american[i,j] = np.maximum(np.exp(-self.r*self.dt)*(p*american_up + (1-p)*american_down), self.tree[i,j]-self.K)\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:174: RuntimeWarning: divide by zero encountered in divide\n",
+      "  d1s = (np.log(St/self.K) + (self.r + 0.5*(vol_hedge**2)*self.taos))/(self.vol*np.sqrt(self.taos))\n",
+      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:156: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  self.delta = norm.cdf((np.log(self.ex_St[0]/self.K) +  (self.r + 0.5*(self.vol**2))*(self.T))/(self.vol*np.sqrt(self.T)))\n"
+     ]
+    }
+   ],
    "source": [
     "vols = np.linspace(0,1,num = 50)\n",
     "S = 100\n",
@@ -546,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,13 +634,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vols_hedge = np.linspace(0,0.99 ,num = 5)\n",
+    "fig,axs = plt.subplots(1,2,figsize = (12,3))\n",
+    "\n",
+    "for v in vols_hedge:\n",
+    "    black_scholes.euler_hedging(vol_hedge = v, do_cash=True)\n",
+    "    axs[0].plot(black_scholes.cash_daily, label = f\"Daily adjustment:vol hedge {np.round(v,2)*100} %\")\n",
+    "    axs[1].plot(black_scholes.cash_weekly, label = f\"Weekly adjustment:vol hedge {np.round(v,2)*100} %\")\n",
+    "\n",
+    "axs[0].set_xlabel(\"Time (days)\")\n",
+    "axs[0].set_ylabel(\"Portfolio Value ($)\")\n",
+    "axs[0].legend()\n",
+    "axs[1].set_xlabel(\"Time (weeks)\")\n",
+    "axs[1].set_ylabel(\"Portfolio Value ($)\")\n",
+    "axs[1].legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,15 +699,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\joann\\OneDrive\\Escritorio\\Intro\\Computational-Finance\\Assignment 1\\models\\black_scholes.py:98: RuntimeWarning: divide by zero encountered in divide\n",
-      "  d1s = (np.log(self.eu_St/self.K) + (self.r + 0.5*(vol_hedge**2)*self.taos))/(self.vol*np.sqrt(self.taos))\n"
+     "ename": "NameError",
+     "evalue": "name 'hedge_simulations_eu' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m vol_stock \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.2\u001b[39m\n\u001b[0;32m      7\u001b[0m vol_hedge \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m\n\u001b[1;32m----> 9\u001b[0m stock_prices, delta_values, cash_values \u001b[38;5;241m=\u001b[39m hedge_simulations_eu(S,r,vol_stock,vol_hedge, T,N,K)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hedge_simulations_eu' is not defined"
      ]
     }
    ],
